# cmake_example_project

./: .gitignore  CMakeLists.txt
include/: Config.h.in
src/: main.cpp
